# dprint-plugin-swift

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  dprint.json
.github/workflows/: ci.yml
metadata/: LICENSES  schema.json
plugin/: Cargo.toml
plugin/src/: config.rs  handler.rs  main.rs
plugin/src/formatter/: command.rs  mod.rs  swiftformat.rs
scripts/: bump-version.sh  create-for-testing.sh  create-plugin-json.sh  fetch-swiftformat.sh  generate-metadata.sh  log.bash  make-steps.sh  release-local-zip.sh  run-tests.sh
testdata/basic/: expected.swift  input.swift.txt
testdata/with-config/: .swiftformat  expected.swift  input.swift.txt
