[workspace]
resolver = "2"
members = ["plugin"]

[workspace.dependencies]
anyhow = "1.0"
dprint-core = { version = "0.68.2", features = ["process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "io-util", "process"] }
